<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_search_type"
        style="@style/Widget.Material3.ChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:checkedChip="@id/chip_movies"
        app:chipSpacingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_search"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/movies"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipCornerRadius="6dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tv_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/tv_series"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipCornerRadius="6dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="6dp"
            android:text="@string/people"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipCornerRadius="6dp" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_search_type" />
</androidx.constraintlayout.widget.ConstraintLayout>